--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
     <header class="block-header">
         <div class="block-header__hat">
-            <div class="block-header__title logo">itlogia.ru</div>
-            <div class="block-header__title">Обучение</div>
-            <div class="block-header__title">Карьерный рост</div>
-            <div class="block-header__title">Повышение дохода</div>
+            <a href='#' class="block-header__title logo">itlogia.ru</a>
+            <a href='#' class="block-header__title">Обучение</a>
+            <a href='#' class="block-header__title">Карьерный рост</a>
+            <a href='#' class="block-header__title">Повышение дохода</a>
         </div>
 
         <div class="block-header__h1">
